<resources>
    <string name="app_name">Solo音乐</string>
    <string name="recommend_music">推荐歌单</string>
    <string name="new_music">最新音乐</string>
    <string name="search">搜索</string>
    <string name="tip">\n温馨提示： \n你可以搜索歌手，歌名，专辑</string>
    <string name="tip_friend">\n温馨提示： \n你可以搜索手机号，昵称</string>
    <string name="bottom_tip">我也是有底的呀</string>
    <string name="singer_info">查看歌手信息</string>
    <string name="cancel">取消</string>
    <string name="bottom_listen">听歌</string>
    <string name="bottom_recipe">美食</string>
    <string name="bottom_friend">歌友</string>
    <string name="bottom_me">我的</string>
    <string name="album">专辑</string>
    <string name="copyright_2018">Solo音乐 ©copyright 2018</string>
    <string name="_3s">倒计时3s</string>
    <string name="update">检查更新</string>
    <string name="setting">清除缓存</string>
    <string name="about">关于</string>
    <string name="collect">我的金币</string>
    <string name="scan">扫一扫</string>
    <string name="zan">赞助开发者</string>
    <string name="share_app">分享APP</string>
    <string name="notice">通知</string>
    <string name="logout">退出登录</string>
    <string name="modify">修改</string>
    <string name="login">登录</string>
    <string name="user">账号</string>
    <string name="user_or_mobile">账号/手机号</string>
    <string name="password">密码</string>
    <string name="new_password">新密码</string>
    <string name="old_password">旧密码</string>
    <string name="protocol">登录即同意《爱猜歌服务条款》\n  <font color='#FF0000'>用户协议</font> 和 <font color='#FF0000'>隐私政策</font>
    \n第三方<font color='#FF0000'> 隐私条款</font> 和 <font color='#FF0000'>服务条款</font>
    </string>
    <string name="user_register">用户注册</string>
    <string name="forget_password">忘记密码？</string>
    <string name="mobile">手机号</string>
    <string name="code">验证码</string>
    <string name="get_code">获取验证码</string>
    <string name="next">下一步</string>
    <string name="register">注册</string>
    <string name="change">修改</string>
    <string name="sure_password">确认密码</string>
    <string name="picture">相册</string>
    <string name="camera">拍照</string>
    <string name="change_password">修改密码</string>
    <string name="reset_password">重置密码</string>
    <string name="reset">重置</string>
    <string name="save_photo">保存到相册</string>
    <string name="developer">开发者:高运</string>
    <string name="contact">联系QQ:1984629668</string>
    <string name="my_code">我的二维码</string>
    <string name="save_long_photo">长按二维码保存到相册</string>
    <string name="set">设置</string>
    <string name="local_music">本地歌曲</string>
    <string name="my_download">我的下载</string>
    <string name="recent_play">最近播放</string>
    <string name="default_num">0</string>
    <string name="my_love">我喜欢</string>
    <string name="wifi">wifi随心听</string>
    <string name="off">未开启</string>
    <string name="my_music_list">我的歌单(0)</string>
    <string name="data_empty">暂无数据</string>
    <string name="detail">详情</string>
    <string name="download_tip">赶快下载使用吧！</string>
    <string name="new_friend">新的歌友</string>
    <string name="group">群聊</string>
    <string name="default_time">00:00</string>
    <string name="info">消息</string>
    <string name="force_update_tip">此次版本需要强制升级，部分功能才可正常使用，如不立即更新，则将退出APP</string>
    <string name="info_detail">通知详情</string>
    <string name="album_name">歌单名称</string>
    <string name="save">保存</string>
    <string name="start_use">开始体验</string>

    <string name="other_network">加入其它网络...</string>
    <string name="input_pwd">请输入密码...</string>
    <string name="ok">确定</string>
    <string name="connect">连接</string>

    <array name="safe">
        <item>开放</item>
        <item>WEP</item>
        <item>WPA</item>
    </array>
</resources>
