<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.ChangePasswordActivity">

    <com.android.customer.music.view.TitleView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:showRight="false"
        app:title="@string/change_password" />

    <com.android.customer.music.view.ClearEditText
        android:id="@+id/et_old_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_height"
        android:layout_marginStart="@dimen/btn_margin"
        android:layout_marginTop="@dimen/btn_margin"
        android:layout_marginEnd="@dimen/btn_margin"
        android:hint="@string/old_password"
        android:inputType="textPassword"
        android:textColorHint="@color/hint_color"
        android:theme="@style/customEditText"
        tools:ignore="RtlSymmetry" />

    <com.android.customer.music.view.ClearEditText
        android:id="@+id/et_new_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_height"
        android:layout_marginStart="@dimen/btn_margin"
        android:layout_marginTop="@dimen/btn_margin"
        android:layout_marginEnd="@dimen/btn_margin"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:textColorHint="@color/hint_color"
        android:theme="@style/customEditText"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/tv_change"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_height"
        android:layout_margin="@dimen/btn_margin"
        android:background="@drawable/btn_selector"
        android:gravity="center"
        android:text="@string/change"
        android:textColor="@color/white"
        android:textSize="@dimen/btn_size" />
</LinearLayout>