<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.MobileActivity">

    <com.android.customer.music.view.TitleView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:showRight="false"
        app:title="@string/mobile" />

    <com.android.customer.music.view.ClearEditText
        android:id="@+id/et_mobile"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_height"
        android:layout_marginStart="@dimen/btn_margin"
        android:layout_marginTop="@dimen/btn_margin"
        android:layout_marginEnd="@dimen/btn_margin"
        android:hint="@string/mobile"
        android:inputType="phone"
        android:maxLength="11"
        android:textColorHint="@color/hint_color"
        android:theme="@style/customEditText"
        tools:ignore="RtlSymmetry" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_height"
        android:layout_marginTop="@dimen/btn_margin"
        android:orientation="horizontal">

        <com.android.customer.music.view.ClearEditText
            android:id="@+id/et_code"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/btn_margin"
            android:layout_marginLeft="@dimen/btn_margin"
            android:layout_weight="1"
            android:hint="@string/code"
            android:inputType="number"
            android:maxLength="4"
            android:textColorHint="@color/hint_color"
            android:theme="@style/customEditText"
            tools:ignore="RtlSymmetry" />

        <View
            android:layout_width="1dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:background="@color/normal" />

        <TextView
            android:id="@+id/tv_code"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:text="@string/get_code"
            android:textColor="@color/normal" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_next"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_height"
        android:layout_margin="@dimen/btn_margin"
        android:background="@drawable/btn_selector"
        android:gravity="center"
        android:text="@string/next"
        android:textColor="@color/white"
        android:textSize="@dimen/btn_size" />
</LinearLayout>