<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/splash_top_color"
    android:orientation="vertical"
    android:padding="@dimen/dp_12">

    <com.example.gy.musicgame.view.ClearEditText
        android:id="@+id/et_album"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_height"
        android:layout_marginStart="@dimen/btn_margin"
        android:layout_marginLeft="@dimen/btn_margin"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:cursorVisible="true"
        android:hint="@string/album_name"
        android:inputType="text"
        android:textColorHint="@color/hint_color"
        android:theme="@style/customEditText"
        tools:ignore="RtlSymmetry" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_icon"
            android:layout_width="@dimen/btn_height"
            android:layout_height="@dimen/btn_height"
            android:layout_marginStart="@dimen/dp_12"
            android:layout_marginLeft="@dimen/dp_12"
            android:layout_marginTop="@dimen/dp_12"
            android:src="@mipmap/logo" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_12"
        android:layout_marginLeft="@dimen/dp_12"
        android:layout_marginTop="@dimen/dp_12"
        android:text="点击图片上传歌单封面"
        android:textSize="@dimen/btn_size"
        tools:ignore="HardcodedText" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_12"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_save"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_height"
            android:layout_weight="1"
            android:background="@color/pressed"
            android:gravity="center"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textSize="@dimen/btn_size"
            tools:ignore="HardcodedText" />

        <TextView
            android:layout_width="@dimen/dp_12"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_height"
            android:layout_weight="1"
            android:background="@color/normal"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="@dimen/btn_size"
            tools:ignore="HardcodedText" />
    </LinearLayout>
</LinearLayout>